tests/neg-custom-args/captures/emptyref-in-self.scala
class Zip[A, B](underlying: String, other: {*} String) {
  this: {underlying, other} Zip[A, B] =>  // error
}
